src/test/ui/regions/region-borrow-params-issue-29793-small.nll.stderr
error[E0373]: closure may outlive the current function, but it borrows `x`, which is owned by the current function
  --> $DIR/region-borrow-params-issue-29793-small.rs:19:17
   |
LL |         let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ^^^^^^^^^        - `x` is borrowed here
   |                 |
   |                 may outlive borrowed value `x`
   |
note: closure is returned here
  --> $DIR/region-borrow-params-issue-29793-small.rs:22:16
   |
LL |         return f;
   |                ^
help: to force the closure to take ownership of `x` (and any other referenced variables), use the `move` keyword
   |
LL |         let f = move |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ^^^^^^^^^^^^^^

error[E0373]: closure may outlive the current function, but it borrows `y`, which is owned by the current function
  --> $DIR/region-borrow-params-issue-29793-small.rs:19:17
   |
LL |         let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ^^^^^^^^^                   - `y` is borrowed here
   |                 |
   |                 may outlive borrowed value `y`
   |
note: closure is returned here
  --> $DIR/region-borrow-params-issue-29793-small.rs:22:16
   |
LL |         return f;
   |                ^
help: to force the closure to take ownership of `y` (and any other referenced variables), use the `move` keyword
   |
LL |         let f = move |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ^^^^^^^^^^^^^^

error[E0373]: closure may outlive the current function, but it borrows `x`, which is owned by the current function
  --> $DIR/region-borrow-params-issue-29793-small.rs:34:17
   |
LL |         let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ^^^^^^^^^        - `x` is borrowed here
   |                 |
   |                 may outlive borrowed value `x`
   |
note: closure is returned here
  --> $DIR/region-borrow-params-issue-29793-small.rs:37:9
   |
LL |         f
   |         ^
help: to force the closure to take ownership of `x` (and any other referenced variables), use the `move` keyword
   |
LL |         let f = move |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ^^^^^^^^^^^^^^

error[E0373]: closure may outlive the current function, but it borrows `y`, which is owned by the current function
  --> $DIR/region-borrow-params-issue-29793-small.rs:34:17
   |
LL |         let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ^^^^^^^^^                   - `y` is borrowed here
   |                 |
   |                 may outlive borrowed value `y`
   |
note: closure is returned here
  --> $DIR/region-borrow-params-issue-29793-small.rs:37:9
   |
LL |         f
   |         ^
help: to force the closure to take ownership of `y` (and any other referenced variables), use the `move` keyword
   |
LL |         let f = move |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ^^^^^^^^^^^^^^

error[E0373]: closure may outlive the current function, but it borrows `x`, which is owned by the current function
  --> $DIR/region-borrow-params-issue-29793-small.rs:65:17
   |
LL |         let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ^^^^^^^^^        - `x` is borrowed here
   |                 |
   |                 may outlive borrowed value `x`
   |
note: closure is returned here
  --> $DIR/region-borrow-params-issue-29793-small.rs:68:16
   |
LL |         return Box::new(f);
   |                ^^^^^^^^^^^
help: to force the closure to take ownership of `x` (and any other referenced variables), use the `move` keyword
   |
LL |         let f = move |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ^^^^^^^^^^^^^^

error[E0373]: closure may outlive the current function, but it borrows `y`, which is owned by the current function
  --> $DIR/region-borrow-params-issue-29793-small.rs:65:17
   |
LL |         let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ^^^^^^^^^                   - `y` is borrowed here
   |                 |
   |                 may outlive borrowed value `y`
   |
note: closure is returned here
  --> $DIR/region-borrow-params-issue-29793-small.rs:68:16
   |
LL |         return Box::new(f);
   |                ^^^^^^^^^^^
help: to force the closure to take ownership of `y` (and any other referenced variables), use the `move` keyword
   |
LL |         let f = move |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ^^^^^^^^^^^^^^

error[E0373]: closure may outlive the current function, but it borrows `x`, which is owned by the current function
  --> $DIR/region-borrow-params-issue-29793-small.rs:76:17
   |
LL |         let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ^^^^^^^^^        - `x` is borrowed here
   |                 |
   |                 may outlive borrowed value `x`
   |
note: closure is returned here
  --> $DIR/region-borrow-params-issue-29793-small.rs:79:9
   |
LL |         Box::new(f)
   |         ^^^^^^^^^^^
help: to force the closure to take ownership of `x` (and any other referenced variables), use the `move` keyword
   |
LL |         let f = move |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ^^^^^^^^^^^^^^

error[E0373]: closure may outlive the current function, but it borrows `y`, which is owned by the current function
  --> $DIR/region-borrow-params-issue-29793-small.rs:76:17
   |
LL |         let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ^^^^^^^^^                   - `y` is borrowed here
   |                 |
   |                 may outlive borrowed value `y`
   |
note: closure is returned here
  --> $DIR/region-borrow-params-issue-29793-small.rs:79:9
   |
LL |         Box::new(f)
   |         ^^^^^^^^^^^
help: to force the closure to take ownership of `y` (and any other referenced variables), use the `move` keyword
   |
LL |         let f = move |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                 ^^^^^^^^^^^^^^

error[E0373]: closure may outlive the current function, but it borrows `x`, which is owned by the current function
  --> $DIR/region-borrow-params-issue-29793-small.rs:100:21
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ^^^^^^^^^        - `x` is borrowed here
   |                     |
   |                     may outlive borrowed value `x`
   |
note: closure is returned here
  --> $DIR/region-borrow-params-issue-29793-small.rs:103:20
   |
LL |             return Box::new(f);
   |                    ^^^^^^^^^^^
help: to force the closure to take ownership of `x` (and any other referenced variables), use the `move` keyword
   |
LL |             let f = move |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ^^^^^^^^^^^^^^

error[E0373]: closure may outlive the current function, but it borrows `y`, which is owned by the current function
  --> $DIR/region-borrow-params-issue-29793-small.rs:100:21
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ^^^^^^^^^                   - `y` is borrowed here
   |                     |
   |                     may outlive borrowed value `y`
   |
note: closure is returned here
  --> $DIR/region-borrow-params-issue-29793-small.rs:103:20
   |
LL |             return Box::new(f);
   |                    ^^^^^^^^^^^
help: to force the closure to take ownership of `y` (and any other referenced variables), use the `move` keyword
   |
LL |             let f = move |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ^^^^^^^^^^^^^^

error[E0373]: closure may outlive the current function, but it borrows `x`, which is owned by the current function
  --> $DIR/region-borrow-params-issue-29793-small.rs:114:21
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ^^^^^^^^^        - `x` is borrowed here
   |                     |
   |                     may outlive borrowed value `x`
   |
note: closure is returned here
  --> $DIR/region-borrow-params-issue-29793-small.rs:117:13
   |
LL |             Box::new(f)
   |             ^^^^^^^^^^^
help: to force the closure to take ownership of `x` (and any other referenced variables), use the `move` keyword
   |
LL |             let f = move |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ^^^^^^^^^^^^^^

error[E0373]: closure may outlive the current function, but it borrows `y`, which is owned by the current function
  --> $DIR/region-borrow-params-issue-29793-small.rs:114:21
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ^^^^^^^^^                   - `y` is borrowed here
   |                     |
   |                     may outlive borrowed value `y`
   |
note: closure is returned here
  --> $DIR/region-borrow-params-issue-29793-small.rs:117:13
   |
LL |             Box::new(f)
   |             ^^^^^^^^^^^
help: to force the closure to take ownership of `y` (and any other referenced variables), use the `move` keyword
   |
LL |             let f = move |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ^^^^^^^^^^^^^^

error[E0373]: closure may outlive the current function, but it borrows `x`, which is owned by the current function
  --> $DIR/region-borrow-params-issue-29793-small.rs:142:21
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ^^^^^^^^^        - `x` is borrowed here
   |                     |
   |                     may outlive borrowed value `x`
   |
note: closure is returned here
  --> $DIR/region-borrow-params-issue-29793-small.rs:145:20
   |
LL |             return Box::new(f);
   |                    ^^^^^^^^^^^
help: to force the closure to take ownership of `x` (and any other referenced variables), use the `move` keyword
   |
LL |             let f = move |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ^^^^^^^^^^^^^^

error[E0373]: closure may outlive the current function, but it borrows `y`, which is owned by the current function
  --> $DIR/region-borrow-params-issue-29793-small.rs:142:21
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ^^^^^^^^^                   - `y` is borrowed here
   |                     |
   |                     may outlive borrowed value `y`
   |
note: closure is returned here
  --> $DIR/region-borrow-params-issue-29793-small.rs:145:20
   |
LL |             return Box::new(f);
   |                    ^^^^^^^^^^^
help: to force the closure to take ownership of `y` (and any other referenced variables), use the `move` keyword
   |
LL |             let f = move |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ^^^^^^^^^^^^^^

error[E0373]: closure may outlive the current function, but it borrows `x`, which is owned by the current function
  --> $DIR/region-borrow-params-issue-29793-small.rs:157:21
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ^^^^^^^^^        - `x` is borrowed here
   |                     |
   |                     may outlive borrowed value `x`
   |
note: closure is returned here
  --> $DIR/region-borrow-params-issue-29793-small.rs:160:13
   |
LL |             Box::new(f)
   |             ^^^^^^^^^^^
help: to force the closure to take ownership of `x` (and any other referenced variables), use the `move` keyword
   |
LL |             let f = move |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ^^^^^^^^^^^^^^

error[E0373]: closure may outlive the current function, but it borrows `y`, which is owned by the current function
  --> $DIR/region-borrow-params-issue-29793-small.rs:157:21
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ^^^^^^^^^                   - `y` is borrowed here
   |                     |
   |                     may outlive borrowed value `y`
   |
note: closure is returned here
  --> $DIR/region-borrow-params-issue-29793-small.rs:160:13
   |
LL |             Box::new(f)
   |             ^^^^^^^^^^^
help: to force the closure to take ownership of `y` (and any other referenced variables), use the `move` keyword
   |
LL |             let f = move |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ^^^^^^^^^^^^^^

error[E0373]: closure may outlive the current function, but it borrows `x`, which is owned by the current function
  --> $DIR/region-borrow-params-issue-29793-small.rs:185:21
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ^^^^^^^^^        - `x` is borrowed here
   |                     |
   |                     may outlive borrowed value `x`
   |
note: closure is returned here
  --> $DIR/region-borrow-params-issue-29793-small.rs:188:20
   |
LL |             return Box::new(f);
   |                    ^^^^^^^^^^^
help: to force the closure to take ownership of `x` (and any other referenced variables), use the `move` keyword
   |
LL |             let f = move |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ^^^^^^^^^^^^^^

error[E0373]: closure may outlive the current function, but it borrows `y`, which is owned by the current function
  --> $DIR/region-borrow-params-issue-29793-small.rs:185:21
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ^^^^^^^^^                   - `y` is borrowed here
   |                     |
   |                     may outlive borrowed value `y`
   |
note: closure is returned here
  --> $DIR/region-borrow-params-issue-29793-small.rs:188:20
   |
LL |             return Box::new(f);
   |                    ^^^^^^^^^^^
help: to force the closure to take ownership of `y` (and any other referenced variables), use the `move` keyword
   |
LL |             let f = move |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ^^^^^^^^^^^^^^

error[E0373]: closure may outlive the current function, but it borrows `x`, which is owned by the current function
  --> $DIR/region-borrow-params-issue-29793-small.rs:199:21
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ^^^^^^^^^        - `x` is borrowed here
   |                     |
   |                     may outlive borrowed value `x`
   |
note: closure is returned here
  --> $DIR/region-borrow-params-issue-29793-small.rs:202:13
   |
LL |             Box::new(f)
   |             ^^^^^^^^^^^
help: to force the closure to take ownership of `x` (and any other referenced variables), use the `move` keyword
   |
LL |             let f = move |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ^^^^^^^^^^^^^^

error[E0373]: closure may outlive the current function, but it borrows `y`, which is owned by the current function
  --> $DIR/region-borrow-params-issue-29793-small.rs:199:21
   |
LL |             let f = |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ^^^^^^^^^                   - `y` is borrowed here
   |                     |
   |                     may outlive borrowed value `y`
   |
note: closure is returned here
  --> $DIR/region-borrow-params-issue-29793-small.rs:202:13
   |
LL |             Box::new(f)
   |             ^^^^^^^^^^^
help: to force the closure to take ownership of `y` (and any other referenced variables), use the `move` keyword
   |
LL |             let f = move |t: bool| if t { x } else { y }; // (separate errors for `x` vs `y`)
   |                     ^^^^^^^^^^^^^^

error: aborting due to 20 previous errors

For more information about this error, try `rustc --explain E0373`.
